Add fonts, fix bug styles of left navigation

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,4 +1,6 @@
-@import url('./reset.scss');
+@import './reset.scss';
+@import './root.scss';
+
 .wrapper {
   display: flex;
 }
@@ -6,11 +8,4 @@
 .page {
   min-height: 100vh;
   transition: all 0.2s;
-  &__left-toggle-open {
-    margin-left: 230px;
-  }
-  &__left-toggle-closed {
-    margin-left: 68px;
-  }
-  overflow-x: hidden;
 }
